# ZionX-backend

./: .env.example  .gitignore  FIXES_SUMMARY.md  HACKATHON_IMPLEMENTATION.md  PRESENTATION_DECK_FINAL.md  README.md  agent.py  agent_config.py  alert_history.py  app.py  daily_tracking.py  document_extractor.py  emergency_alerts.py  main.py  memory.py  prompts.py  pyproject.toml  risk_monitor.py  test_changes.py  test_hackathon_features.py  thread_manager.py  users.py
core/: config.py  models.py
memory/: daniel.txt
services/: ai_service.py
tools/: __init__.py  diabetes.py  emergency.py  mental_health.py  pediatrics.py  pregnancy.py  preventive.py  specialist_utils.py
